Update signatories list

--- a/src/data/signatures.yaml
+++ b/src/data/signatures.yaml
@@ -20,6 +20,8 @@
   url: fsfe.org
 - organization: Guardian Project
   url: guardianproject.info
+- organization: IzzyOnDroid
+  url: izzyondroid.org
 - organization: Nextcloud
   url: nextcloud.com
 - organization: Open Rights Group
