--- a/src/data/links/editorials.yaml
+++ b/src/data/links/editorials.yaml
@@ -21,6 +21,10 @@ heading:
   zh-TW: "社論與部落格"
 
 items:
+  - text: "An Open Letter Opposing Android Developer Verification"
+    url: "https://f-droid.org/en/2026/02/24/2026-02-24-open-letter-opposing-developer-verification.html"
+  - text: "Keep Android Open"
+    url: "https://f-droid.org/en/2026/02/20/twif.html"
   - text: "Your Smartphone, Their Rules: How App Stores Enable Corporate-Government Censorship"
     url: "https://www.aclu.org/news/free-speech/app-store-oligopoly"
   - text: "Application Gatekeeping: An Ever-Expanding Pathway to Internet Censorship"
